# anchorflow

./: .env.example  .gitignore  README.md
contracts/: Cargo.toml
contracts/invoice-token/: Cargo.toml
contracts/invoice-token/src/: lib.rs  test.rs
contracts/invoice-token/test_snapshots/test/: test_accept_moves_to_accepted.1.json  test_counter_increments.1.json  test_financed_requires_accepted.1.json  test_mint_creates_pending_invoice.1.json  test_pool_lifecycle.1.json
contracts/lending-pool/: Cargo.toml
contracts/lending-pool/src/: lib.rs  test.rs
contracts/lending-pool/test_snapshots/test/: test_borrow_insufficient_liquidity.1.json  test_borrow_requires_accepted_invoice.1.json  test_full_financing_flow.1.json  test_lp_yield_realized_on_withdraw.1.json
contracts/payroll-stream/: Cargo.toml
contracts/payroll-stream/src/: lib.rs  test.rs
contracts/payroll-stream/test_snapshots/test/: test_cancel_splits_funds.1.json  test_create_escrows_funds.1.json  test_invalid_range.1.json  test_linear_vesting.1.json  test_withdraw_nothing_before_start.1.json  test_withdraw_vested.1.json
deployments/: testnet.json
docs/: ARCHITECTURE.md  DEMO.md  DEMO_VIDEO.md  DEPLOYMENT.md  PITCH.md
scripts/: deploy_testnet.sh  smoke_backend.sh
