[workspace]
resolver = "2"
members = [
    "invoice-token",
    "lending-pool",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Can Sarıhan <can@anchorflow.dev>"]
license = "MIT"
repository = "https://github.com/cansarihan/anchorflow"

[workspace.dependencies]
soroban-sdk = "22"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
